Set timeout for upgrade tests to 1h30m
On successful runs it takes between 50-60 minutes to execute the test
suite. Having 1h30m for the timeout could give enough buffer and prevent
hanging too long.

--- a/config/serverless-operator.yaml
+++ b/config/serverless-operator.yaml
@@ -568,6 +568,7 @@ repositories:
   e2e:
   - match: ^operator-e2e$
   - match: ^test-upgrade$
+    timeout: 1h30m0s
   - ignoreError: true
     match: ^upstream-e2e$
     skipCron: true
