--- a/config/serverless-operator.yaml
+++ b/config/serverless-operator.yaml
@@ -568,6 +568,8 @@ repositories:
   e2e:
   - match: ^operator-e2e$
   - match: ^test-upgrade$
+    timeout: 1h30m0s
+    jobTimeout: 5h0m0s
   - ignoreError: true
     match: ^upstream-e2e$
     skipCron: true
