--- a/pkg/konfluxgen/pipeline-run.template.yaml
+++ b/pkg/konfluxgen/pipeline-run.template.yaml
@@ -10,6 +10,9 @@ metadata:
     build.appstudio.redhat.com/target_branch: '{{target_branch}}'
     pipelinesascode.tekton.dev/max-keep-runs: "3"
     pipelinesascode.tekton.dev/on-cel-expression: event == "{{{ .Event }}}" && target_branch == "{{{ .ReleaseBuildConfiguration.Metadata.Branch }}}" {{{ .AdditionalTektonCELExpression }}}
+    {{- range $key, $value := .PipelineRunAnnotations }}
+    {{ $key }}: "{{ $value }}"
+    {{- end }}
   creationTimestamp: null
   labels:
     appstudio.openshift.io/application: {{{ truncate ( sanitize .ApplicationName ) }}}
