Increase workers for EC IntegrationTestScenarios runs

--- a/pkg/konfluxgen/integration-test-scenario.template.yaml
+++ b/pkg/konfluxgen/integration-test-scenario.template.yaml
@@ -8,6 +8,8 @@ spec:
       value: {{{ .ECPolicyConfiguration }}}
     - name: TIMEOUT
       value: "120m"
+    - name: WORKERS
+      value: "8"
   application: {{{ truncate ( sanitize .ApplicationName ) }}}
   contexts:
     {{{- range .Contexts }}}
