--- a/pkg/konfluxgen/releaseplanadmission-component.template.yaml
+++ b/pkg/konfluxgen/releaseplanadmission-component.template.yaml
@@ -17,11 +17,20 @@ spec:
       product_name: "OpenShift Serverless"
       product_version: "{{{ .SOVersion }}}"
       references:
-        - https://docs.redhat.com/en/documentation/red_hat_openshift_serverless
-      solution: "The container images provided by this update can be downloaded from the Red Hat container registry at registry.redhat.io"
-      description: "Release {{{ .SOVersion }}} of OpenShift Serverless"
-      topic: "Release {{{ .SOVersion }}} of OpenShift Serverless"
-      synopsis: "OpenShift Serverless Release {{{ .SOVersion }}}"
+        - "https://docs.redhat.com/documentation/red_hat_openshift_serverless/"
+      type: "RHEA"
+      solution: |
+        The Red Hat OpenShift Serverless Operator provides a collection of APIs that
+        enables containers, microservices and functions to run "serverless".
+        Serverless applications can scale up and down (to zero) on demand and be triggered by a
+        number of event sources. OpenShift Serverless integrates with a number of
+        platform services, such as Monitoring and it is based on the open
+        source project Knative.
+      description: "The {{{ .SOVersion }}} release of Red Hat OpenShift Serverless Operator."
+      topic: |
+        The {{{ .SOVersion }}} GA release of Red Hat OpenShift Serverless Operator.
+        For more details see [product documentation](https://docs.redhat.com/documentation/red_hat_openshift_serverless).
+      synopsis: "Red Hat OpenShift Serverless Release {{{ .SOVersion }}}"
     mapping:
       components:
       {{{- range $component := .Components }}}
