--- a/.github/workflows/generate-release-crs.yaml
+++ b/.github/workflows/generate-release-crs.yaml
@@ -13,6 +13,7 @@ on:
           - stage
           - prod
         required: true
+        default: "prod"
       type:
         description: "Type to release"
         type: choice
