--- a/.konflux/applications/serverless-operator-135-fbc-417/tests/ec-test.yaml
+++ b/.konflux/applications/serverless-operator-135-fbc-417/tests/ec-test.yaml
@@ -13,7 +13,7 @@ spec:
   application: serverless-operator-135-fbc-417
   contexts:
     - description: Application testing
-      name: application
+      name: push
   resolverRef:
     params:
       - name: url
