--- a/config/eventing-istio.yaml
+++ b/config/eventing-istio.yaml
@@ -6,12 +6,6 @@ config:
         version: "4.17"
       - onDemand: true
         version: "4.13"
-    release-v1.12:
-      openShiftVersions:
-      - useClusterPool: true
-        version: "4.16"
-      - onDemand: true
-        version: "4.12"
     release-v1.14:
       openShiftVersions:
       - useClusterPool: true
@@ -42,10 +36,14 @@ config:
       konflux:
         enabled: true
       openShiftVersions:
+      - candidateRelease: true
+        onDemand: true
+        skipCron: true
+        version: "4.18"
       - useClusterPool: true
         version: "4.17"
       - onDemand: true
-        version: "4.13"
+        version: "4.14"
 repositories:
 - dockerfiles: {}
   e2e:
