--- a/config/eventing-kafka-broker.yaml
+++ b/config/eventing-kafka-broker.yaml
@@ -12,12 +12,6 @@ config:
         version: "4.13"
       skipDockerFilesMatches:
       - .*hermetic.*
-    release-v1.12:
-      openShiftVersions:
-      - useClusterPool: true
-        version: "4.16"
-      - onDemand: true
-        version: "4.12"
     release-v1.14:
       openShiftVersions:
       - useClusterPool: true
@@ -61,10 +55,14 @@ config:
         - .*eventing-kafka-broker-receiver
         - .*eventing-kafka-broker-dispatcher
       openShiftVersions:
+      - candidateRelease: true
+        onDemand: true
+        skipCron: true
+        version: "4.18"
       - useClusterPool: true
         version: "4.17"
       - onDemand: true
-        version: "4.13"
+        version: "4.14"
       skipDockerFilesMatches:
       - .*hermetic.*
 repositories:
