--- a/config/eventing.yaml
+++ b/config/eventing.yaml
@@ -42,10 +42,14 @@ config:
       konflux:
         enabled: true
       openShiftVersions:
+      - candidateRelease: true
+        onDemand: true
+        skipCron: true
+        version: "4.18"
       - useClusterPool: true
         version: "4.17"
       - onDemand: true
-        version: "4.13"
+        version: "4.14"
 repositories:
 - dockerfiles: {}
   e2e:
