--- a/config/kn-plugin-func.yaml
+++ b/config/kn-plugin-func.yaml
@@ -26,6 +26,9 @@ config:
     release-v1.17:
       konflux:
         enabled: true
+        imagesOverrides:
+        - name: GO_BUILDER
+          pullSpec: brew.registry.redhat.io/rh-osbs/openshift-golang-builder:rhel_8_golang_1.23
       openShiftVersions:
       - candidateRelease: true
         onDemand: true
