--- a/config/client.yaml
+++ b/config/client.yaml
@@ -27,6 +27,10 @@ config:
     release-v1.17:
       konflux:
         enabled: true
+        imageOverrides:
+          - name: CLI_ARTIFACTS
+            # TODO: swtich to 1.17 image once it is available in brew
+            pullSpec: brew.registry.redhat.io/rh-osbs/openshift-serverless-1-kn-cli-artifacts-rhel8:1.16.0
       openShiftVersions:
       - candidateRelease: true
         onDemand: true
@@ -38,6 +42,10 @@ config:
     release-v1.18:
       konflux:
         enabled: true
+        imageOverrides:
+          - name: CLI_ARTIFACTS
+            # TODO: swtich to 1.18 image once it is available in brew
+            pullSpec: brew.registry.redhat.io/rh-osbs/openshift-serverless-1-kn-cli-artifacts-rhel8:1.16.0
       openShiftVersions:
       - candidateRelease: true
         onDemand: true
