--- a/pkg/konfluxgen/kustomize/kustomize-bundle-build/kustomization.yaml
+++ b/pkg/konfluxgen/kustomize/kustomize-bundle-build/kustomization.yaml
@@ -22,6 +22,9 @@ patches:
   - path: ./patch_remove_ecosystem-cert-preflight-checks.patch.yaml
     target:
       kind: Pipeline
+  - path: ./patch_build-image-index-param.patch.yaml
+    target:
+      kind: Pipeline
   - patch: |-
       - op: replace
         path: /metadata/name
