--- a/pkg/konfluxgen/kustomize/kustomize-bundle-build/patch_build-image-index-param.patch.yaml
+++ b/pkg/konfluxgen/kustomize/kustomize-bundle-build/patch_build-image-index-param.patch.yaml
@@ -6,3 +6,8 @@ spec:
   params:
     - name: build-image-index
       default: "false"
+  tasks:
+    - name: build-source-image
+      params:
+        - name: BINARY_IMAGE
+          value: $(tasks.build-image-index.results.IMAGE_URL)
