--- a/.konflux/releaseplanadmissions/serverless-operator-136-1360-fbc-prod.yaml
+++ b/.konflux/releaseplanadmissions/serverless-operator-136-1360-fbc-prod.yaml
@@ -14,6 +14,7 @@ spec:
     - serverless-operator-136-fbc-416
     - serverless-operator-136-fbc-417
     - serverless-operator-136-fbc-418
+    - serverless-operator-136-fbc-419
   origin: ocp-serverless-tenant
   policy: fbc-standard
   data:
