--- a/pkg/konfluxgen/testdata/docker-build.yaml
+++ b/pkg/konfluxgen/testdata/docker-build.yaml
@@ -369,8 +369,10 @@ spec:
       - "false"
   - name: apply-tags
     params:
-    - name: IMAGE
+    - name: IMAGE_URL
       value: $(tasks.build-container.results.IMAGE_URL)
+    - name: IMAGE_DIGEST
+      value: $(tasks.build-image-index.results.IMAGE_DIGEST)
     runAfter:
     - build-container
     taskRef:
