Update Konflux build definition to latest

--- a/pkg/konfluxgen/kustomize/kustomize-fbc-builder/patch_related_image_check.patch.yaml
+++ b/pkg/konfluxgen/kustomize/kustomize-fbc-builder/patch_related_image_check.patch.yaml
@@ -7,11 +7,11 @@ spec:
     - name: skip-fbc-related-image-check
       description: Skip fbc-related-image-check
       type: string
-      default: "false"
+      default: 'false'
   tasks:
     - name: fbc-related-image-check
       when:
         - input: $(params.skip-fbc-related-image-check)
           operator: in
           values:
-            - "false"
+            - 'false'
