--- a/pkg/konfluxgen/kustomize/kustomize-bundle-build/patch_build-image-index-param.patch.yaml
+++ b/pkg/konfluxgen/kustomize/kustomize-bundle-build/patch_build-image-index-param.patch.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   params:
     - name: build-image-index
-      default: "false"
+      default: 'false'
   tasks:
     - name: build-images
       params:
