--- a/config/backstage-plugins.yaml
+++ b/config/backstage-plugins.yaml
@@ -21,9 +21,9 @@ config:
       - candidateRelease: true
         onDemand: true
         skipCron: true
-        version: "4.19"
+        version: "4.20"
       - useClusterPool: true
-        version: "4.18"
+        version: "4.19"
       - onDemand: true
         version: "4.14"
     release-v1.17:
@@ -33,9 +33,9 @@ config:
       - candidateRelease: true
         onDemand: true
         skipCron: true
-        version: "4.19"
+        version: "4.20"
       - useClusterPool: true
-        version: "4.18"
+        version: "4.19"
       - onDemand: true
         version: "4.14"
     release-v1.18:
@@ -45,8 +45,9 @@ config:
       - candidateRelease: true
         onDemand: true
         skipCron: true
-        version: "4.18"
-      - version: "4.17"
+        version: "4.20"
+      - useClusterPool: true
+        version: "4.19"
       - onDemand: true
         version: "4.14"
 repositories:
