--- a/config/client.yaml
+++ b/config/client.yaml
@@ -20,7 +20,7 @@ config:
       - candidateRelease: true
         onDemand: true
         skipCron: true
-        version: "4.20
+        version: "4.20"
       - skipCron: true
         useClusterPool: true
         version: "4.19"
